Cambios en back de administrador (faltan correciones)

--- a/Views/Login.html
+++ b/Views/Login.html
@@ -64,7 +64,7 @@
                     <p class="text-center small">Ingresa tu identificacion/NIT & tu contraseña</p>
                   </div>
                   <!-- Formulario inicio de sesión -->
-                  <form class="row g-3 needs-validation" novalidate>
+                  <form class="row g-3 needs-validation" action="../Controllers/inicioSesion.php" method="post" novalidate>
 
                     <!-- Campo numéro de documento -->
                     <div class="col-12">
@@ -86,6 +86,8 @@
                         <div class="invalid-feedback">Ingresa tu contraseña</div>
                       </div>
                     </div>
+
+                    <a href="recuperarClave">¿Olvido su contraseña?</a>
 
 
                     <div class="col-12">
