--- a/Views/administrador-editarZona.html
+++ b/Views/administrador-editarZona.html
@@ -152,7 +152,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="Administrador.html">
+        <a class="nav-link collapsed" href="Administrador.php">
           <i class="bi bi-house"></i>
           <span>Home</span>
         </a>
@@ -205,7 +205,7 @@
         </a>
         <ul id="zonas-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="administrador-asignarZonas.html">
+            <a href="administrador-asignarZonas.php">
               <i class="bi bi-circle"></i><span>Asignar Zona</span>
             </a>
           </li>
@@ -215,7 +215,7 @@
             </a>
           </li>
           <li>
-            <a href="administrador-ingresarZona.html" class="active">
+            <a href="administrador-ingresarZona.php" class="active">
               <i class="bi bi-circle"></i><span>Ingresar Zonas</span>
             </a>
           </li>
