Se agrega el back end para editar y eliminar las zonas que ya fueron asignadas a los motorizados

--- a/Views/administrador-editarZona.html
+++ b/Views/administrador-editarZona.html
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li>
-            <a href="administrador-zonasAsignadas.html">
+            <a href="administrador-zonasAsignadas.php">
               <i class="bi bi-circle"></i><span>Zonas Asignadas</span>
             </a>
           </li>
