--- a/Views/administrador-ingresarExamen.html
+++ b/Views/administrador-ingresarExamen.html
@@ -210,7 +210,7 @@
             </a>
           </li>
           <li>
-            <a href="administrador-zonasAsignadas.html">
+            <a href="administrador-zonasAsignadas.php">
               <i class="bi bi-circle"></i><span>Zonas Asignadas</span>
             </a>
           </li>
@@ -302,19 +302,6 @@
               </div>
             </div>
             
-            <!-- <div class="col-md-6 mb-3">
-              <label for="tipoEx" class="col-form-label" required>Tipo Exámen</label>
-              <div>
-                  <select class="form-control" id="tipoEx" required>
-                      <option value="" disabled selected>Seleccione una opción</option>
-                      <option value="Hematología">Hematología</option>
-                      <option value="Coagulación">Coagulación</option>
-                      <option value="Química sanguínea">Química sanguínea</option>
-                      <option value="Químicas especializadas">Químicas especializadas</option>
-                      <option value="Hormonas">Hormonas</option>
-                  </select>
-              </div>
-            </div> -->
             
             <div class="text-center">
               <button type="submit" class="btn enviar">Enviar</button>
