Se agrega el back de inicio de sesion para los empleados y se agrega la autentificación de inicio de sesion en las interfaces del administrador, esta autentificacion de seguridad con el fin de que no se ingrese a las interfaces por medio del link

--- a/Views/veterinaria-confirmarSolicitud.html
+++ b/Views/veterinaria-confirmarSolicitud.html
@@ -180,12 +180,12 @@
             </a>
           </li>
           <li>
-            <a href="veterinaria-cancelarReprogramar.html" class="active">
+            <a href="veterinaria-cancelarReprogramar.html" >
               <i class="bi bi-circle"></i><span>Cancelar/Reprogramar</span>
             </a>
           </li>
           <li>
-            <a href="veterinaria-confirmarSolicitud.html">
+            <a href="veterinaria-confirmarSolicitud.html" class="active">
               <i class="bi bi-circle"></i><span>Confirmar Solicitud</span>
             </a>
           </li>
@@ -272,7 +272,7 @@
                   <th>Jornada</th>
                   <th>Nombre Exámen/es</th>
                   <th>Urgencia</th>
-                  <th>Acciones</th>
+                  <th>Acciones</th> <!-- Realizda no realizada -->
                 </tr>
             </thead>
             <tbody id="tbody">
