--- a/Views/veterinaria-cancelarReprogramar.html
+++ b/Views/veterinaria-cancelarReprogramar.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bienvenido Administrador</title>
+  <title>Bienvenido Veterinario</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -163,7 +163,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="veterinaria.html">
+        <a class="nav-link collapsed" href="veterinaria.php">
           <i class="bi bi-house"></i>
           <span>Home</span>
         </a>
@@ -175,7 +175,7 @@
         </a>
         <ul id="solicitudes-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="veterinaria-hacerSolicitud.html">
+            <a href="veterinaria-hacerSolicitud.php">
               <i class="bi bi-circle"></i><span>Hacer Solicitudes</span>
             </a>
           </li>
