avances back veterinaria y se agregan las interfaces del motorizado

--- a/Views/veterinaria-resultados.html
+++ b/Views/veterinaria-resultados.html
@@ -1,3 +1,10 @@
+<?php
+session_start();  // Esto es necesario para iniciar la sesión
+
+include('../Models/autenticacion.php');  // Incluir el archivo de autenticación
+verificarSesion();  // Verificar que esté logueado
+
+?>
 <!-- Cargar las dependencias necesarias -->
 
 <?php
@@ -179,12 +186,12 @@
               </a>
             </li>
             <li>
-              <a href="veterinaria-cancelarReprogramar.html">
+              <a href="veterinaria-cancelarReprogramar.php">
                 <i class="bi bi-circle"></i><span>Cancelar/Reprogramar</span>
               </a>
             </li>
             <li>
-              <a href="veterinaria-confirmarSolicitud.html">
+              <a href="veterinaria-confirmarSolicitud.php">
                 <i class="bi bi-circle"></i><span>Confirmar Solicitud</span>
               </a>
             </li>
