Avance rol veterinaria

--- a/Views/veterinaria-resultados.html
+++ b/Views/veterinaria-resultados.html
@@ -217,7 +217,7 @@ verificarSesion();  // Verificar que esté logueado
           </a>
           <ul id="examenes-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
               <li>
-                  <a href="veterinaria-historialSolicitudes.html" >
+                  <a href="veterinaria-historialSolicitudes.php" >
                       <i class="bi bi-circle"></i><span>H. Solicitudes</span>
                   </a>
               </li>
