--- a/Views/assets2/style/main.css
+++ b/Views/assets2/style/main.css
@@ -114,14 +114,16 @@ nav .navbar-nav {
 
 
 #hero .algo button {
-    background-color: white;
+    background-color: #dcdcdc;
     color: black;
     padding: 10px; 
     border: 1px solid black; 
     cursor: pointer;
     border-radius: 10px;
+    transition: background-color 0.3s, transform 0.2s;
+
 }
-#hero .algo button:hover {
+#hero .algo button:hover{
     transform: scale(1.05);
     cursor: pointer;
     background-color: #ffffff;
@@ -423,7 +425,7 @@ max-width: 400px;
 }
 
 body#Seleccionar .imagen-registro {
-max-width: 100px;
+max-width: 100%;
 margin-bottom: 1rem;
 }
 
