Ya se guarda foto de perfil en la carpeta del poryecto

--- a/Views/RecuperarClave.html
+++ b/Views/RecuperarClave.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>RECUPERAR CLAVE</title>
+  <title>Recuperar Clave</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,7 +40,7 @@
 
 <body>
 
-  <main id="login">
+  <main id="recuperarClave">
     <div class="container">
 
       <section class="section min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
