Correciones de estilos, se agregan flechas

--- a/Views/Login.html
+++ b/Views/Login.html
@@ -54,8 +54,11 @@
               <!-- Tarjeta inicio de sesión -->
               <div class="card mb-3">
                 <div class="d-flex justify-content-center ">
-                  <a href="index.html" class="logo d-flex align-items-center w-auto">
+                  <a href="Login.html" class="logo d-flex align-items-center w-auto">
                     <img src="assets/img/NombreLogoTransparente.png" alt="logo Elemental" height="200px">
+                  </a>
+                  <a href="../index.html" class="position-absolute top-0 start-0 ms-3 mt-3 text-decoration-none">
+                    <i class="bi bi-arrow-left" style="font-size: 1.5rem; color: #000;"></i>
                   </a>
                 </div>
                 <div class="card-body">
@@ -87,7 +90,15 @@
                       </div>
                     </div>
 
-                    <a href="RecuperarClave.html">¿Olvidó su contraseña?</a>
+                    <div class="d-flex justify-content-between">
+                      <a href="RecuperarClave.html" class="mr-3">¿Olvidó su contraseña?</a>
+                      <a href="seleccionarRegistro.html">Registrarme</a>
+                    </div>
+                    
+
+                    
+
+                    
 
 
                     <div class="col-12">
