--- a/Views/seleccionarRegistro.html
+++ b/Views/seleccionarRegistro.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <!-- Agregar el enlace de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Agregar el enlace para Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="assets2/style/main.css">
 </head>
 <body id="Seleccionar">
+    <!-- Icono de flecha -->
+    
+    
     <div class="contenedor-registro">
+        <a href="../index.html" class="position-absolute top-0 start-0 ms-3 mt-3 text-decoration-none">
+            <i class="bi bi-arrow-left" style="font-size: 1.5rem; color: #000;"></i>
+        </a>
         <img src="assets/img/NombreLogoTransparente.png" alt="Icono de registro" class="imagen-registro">
+        
         <h1 class="titulo-registro">Registro</h1>
         <p class="descripcion-registro">Seleccione cómo desea registrarse:</p>
         <a href="Registro-usuarios.php"><button id="btn-empleado" class="btn-registro">Soy Empleado</button></a>
