--- a/Views/assets2/style/main.css
+++ b/Views/assets2/style/main.css
@@ -148,6 +148,7 @@ main{
 }
 #contenido1 h2{
     padding-top: 30%;
+    color: #0056b3;
 }
 
 #contenido1 .tarjeta{
@@ -160,7 +161,7 @@ main{
     color: #fff;
 }
 #contenido1 .tarjeta i::before{
-    background-color: #3476ff;
+    background-color: #056cc0;
     border-radius: 50px;
     padding: 20px;
     margin: 12px 0 0px 16px;
@@ -201,7 +202,7 @@ main{
 }
 #contenido2 i::before{
     padding: 6px;
-    background: #3476ff;
+    background: #0056b3;
     border-radius: 50%;
 }
 
